--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
+    "nuxt-gsap-module": "^1.7.0",
     "postcss": "^8.4.4",
     "prettier": "^2.5.1",
     "sass": "^1.51.0",
