--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "prettier": "^2.5.1",
     "sass": "^1.51.0",
     "sass-loader": "^10.2.1"
+  },
+  "engines": {
+    "node": "16.0.0"
   }
 }
